chore: update all dependencies to latest versions

--- a/src/content/IndexPage/hero.mdx
+++ b/src/content/IndexPage/hero.mdx
@@ -2,9 +2,9 @@
 header: We focus on growing your brand online
 description: Build world-class digital products with a team of design, development & strategy experts. All in one place. We can provide your business with a variety of digital solutions.
 image: /assets/img/th-1/hero-img.png
-PreviewVideo: 'https://www.youtube.com/watch?v=3nQNiWdeH2Q'
-form: 
-    placeholder: Enter your email
-    buttonText: Subscribe
-    text: No credit card is required. You can cancel anytime
+PreviewVideo: "https://www.youtube.com/watch?v=3nQNiWdeH2Q"
+form:
+  placeholder: Enter your email
+  buttonText: Subscribe
+  text: No credit card is required. You can cancel anytime
 ---
