--- a/src/content/contact/index.mdx
+++ b/src/content/contact/index.mdx
@@ -2,7 +2,7 @@
 cards:
   - title: Chat with us
     description: We're waiting to help you every Monday-Friday from 9 am to 5 pm EST easily.
-    icon: '/assets/img/icons/icon-duotone-chat.svg'
+    icon: "/assets/img/icons/icon-duotone-chat.svg"
   - title: Give us a call
     description: Give us a ring at (+012-345-567-890). Every monday-friday from 9 am to 5 pm.
     icon: /assets/img/icons/icon-duotone-phone.svg
