--- a/src/content/services/service-1.mdx
+++ b/src/content/services/service-1.mdx
@@ -1,8 +1,8 @@
 ---
 title: Branding & Digital Strategies
-icon: 
-    blue: /assets/img/icons/icon-blue-service-1.svg
-    black: /assets/img/icons/icon-black-service-1.svg
+icon:
+  blue: /assets/img/icons/icon-blue-service-1.svg
+  black: /assets/img/icons/icon-black-service-1.svg
 description: Brand strategy is all about developing a unique identity that distinguishes your business from
 image: /assets/img/th-1/service-main-img.jpg
 ---
@@ -20,9 +20,15 @@ What makes it unique? What do you want people to think about your product or ser
 
 Creating an effective digital brand takes time, effort, and due diligence. It's not as simple as making a logo, showing up with a few dozen hashtags, and calling. Let's dive into the roadmap for building a digital brand strategy with a few detailed examples.
 
-<div class='font-semibold text-ColorBlack'>
-  <ServiceBadge>Digital Branding - Creating your brand image through logo, website design,and social media design to produce a solid brand identity</ServiceBadge>
-  <ServiceBadge>Digital Marketing - Promoting your existing brand image through content marketing and advertising techniques to impact consumers.</ServiceBadge>
+<div class="font-semibold text-ColorBlack">
+  <ServiceBadge>
+    Digital Branding - Creating your brand image through logo, website
+    design,and social media design to produce a solid brand identity
+  </ServiceBadge>
+  <ServiceBadge>
+    Digital Marketing - Promoting your existing brand image through content
+    marketing and advertising techniques to impact consumers.
+  </ServiceBadge>
 </div>
 
 <TwoImages
