--- a/src/content/services/service-5.mdx
+++ b/src/content/services/service-5.mdx
@@ -1,8 +1,8 @@
 ---
 title: Search Engine Optimization
-icon: 
-    blue: /assets/img/icons/icon-blue-service-5.svg
-    black: /assets/img/icons/icon-black-service-5.svg
+icon:
+  blue: /assets/img/icons/icon-blue-service-5.svg
+  black: /assets/img/icons/icon-black-service-5.svg
 description: Custom Software Development is the process of conceptualizing, designing, building & deploying
 image: /assets/img/th-1/service-main-img.jpg
 ---
@@ -20,10 +20,10 @@ What makes it unique? What do you want people to think about your product or ser
 
 Creating an effective digital brand takes time, effort, and due diligence. It's not as simple as making a logo, showing up with a few dozen hashtags, and calling. Let's dive into the roadmap for building a digital brand strategy with a few detailed examples.
 
-<div class='font-semibold text-ColorBlack'>
+<div class="font-semibold text-ColorBlack">
   <ServiceBadge>
     Digital Branding - Creating your brand image through logo, website design,
-    and social media design to produce a solid brand identity through 
+    and social media design to produce a solid brand identity through
   </ServiceBadge>
   <ServiceBadge>
     Digital Marketing - Promoting your existing brand image through content
