--- a/src/content/Pricing/plan-2.mdx
+++ b/src/content/Pricing/plan-2.mdx
@@ -2,16 +2,16 @@
 name: Popular Plan
 price: 199 #monthly
 description: No credit card required
-points: 
-    included:
-        - Unlimited chats & websites
-        - 60-day conversations history
-        - Basic widget customization
-        - Web, desktop & mobile apps
-        - Engage visitors via visitor list
-        - Engage visitors via visitor list
-        - Engage with automatic messages
-button: 
-    text: Purchase Now
-    link: '#'
+points:
+  included:
+    - Unlimited chats & websites
+    - 60-day conversations history
+    - Basic widget customization
+    - Web, desktop & mobile apps
+    - Engage visitors via visitor list
+    - Engage visitors via visitor list
+    - Engage with automatic messages
+button:
+  text: Purchase Now
+  link: "#"
 ---
