--- a/src/content/portfolio/portfolio-2.mdx
+++ b/src/content/portfolio/portfolio-2.mdx
@@ -20,7 +20,7 @@ Interface (UI) determines how the app will look like, while UX determines what p
 
 A user can engage with a product or service by using a user interface (UI), which is essentially a collection of screens, pages, visual elements (such as buttons and icons). The phrase “User Experience” refers to how a person reacts to each component.
 
-<ol class='list-inside list-decimal my-5'>
+<ol class="list-inside list-decimal my-5">
   <li>Strategic Discovery</li>
   <li>Web application redesign and optimization</li>
   <li>Mobile application redesign and optimization</li>
