fix: resolve Astro v5 TypeScript build errors
- Update content API from deprecated .render() method to new render() function
- Replace .slug references with .id for content collections
- Add proper null safety checks for data destructuring
- Fix all 36 TypeScript errors preventing successful builds
- Ensure compatibility with Astro v5 content collection changes

All astro check errors now resolved for successful Vercel deployment.

--- a/src/content/IndexPage/hero.mdx
+++ b/src/content/IndexPage/hero.mdx
@@ -5,10 +5,9 @@ description: >-
   strategy experts. All in one place. We can provide your business with a
   variety of digital solutions.
 image: /assets/img/th-1/hero-img.png
-PreviewVideo: 'https://www.youtube.com/watch?v=3nQNiWdeH2Q'
+PreviewVideo: "https://www.youtube.com/watch?v=3nQNiWdeH2Q"
 form:
   placeholder: Enter your email
   buttonText: Subscribe
   text: No credit card is required. You can cancel anytime
 ---
-
